<resources>
    <string name="app_name">Prohlížeč programů</string>
    <string name="Search">Najít</string>
    <string name="SearchResults">Výsledky hledání</string>
    <string name="SubjectAbbrev">Zkratka předmětu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Název</string>
    <string name="Typ">Typ</string>
    <string name="Faculty">Fakulta</string>
    <string name="Year">Rok</string>
    <string name="pozadavkyKPrijeti">Požadavky k přijetí</string>
    <string name="maximalniDelkaStudia">Maximální délka studia</string>
    <string name="standardniDelkaStudia">Standardní délka studia</string>
    <string name="kod">Kód</string>
    <string name="nazev">Název</string>
    <string name="zpetNaPrehled">Zpět na přehled</string>
    <string name="titul">Titul</string>
    <string name="forma">Forma</string>
    <string name="garant">garant</string>
    <string name="jazyk">jazyk</string>
    <string name="isced">isced</string>
    <string name="proVyraz">Pro výraz</string>
    <string name="nazevProgramu">Název programu</string>
    <string name="OK">OK</string>
    <string name="Storno">Storno</string>
    <string name="ZmenitFakultu">Změnit fakultu</string>
    <string name="VyberteFakultu">Vyberte fakultu</string>
</resources>